--- a/project/project.css
+++ b/project/project.css
@@ -81,14 +81,14 @@ p{
     position: relative;
 }
 .link{
-    color: #FFF;
+    color: var(--main-yellow);
     text-underline-offset: 10px;
     margin: auto;
     font-size: 24px;
     font-family: Coda, sans-serif;
 }
 .link:hover{
-    color: var(--main-yellow);
+    color: var(--black);
 }
 section{
     position: relative;
