--- a/logo.css
+++ b/logo.css
@@ -64,7 +64,7 @@ p {
 .cta{
     display: none;
     background-color: var(--black); 
-    padding: 7px 5px 0 5px;
+    padding: 13px 5px 5px 5px;
     border-radius: 5px;
     position: fixed;
     bottom: 10px;
@@ -72,6 +72,9 @@ p {
     transform: translateX(-50%);
     text-decoration: none;
     max-width: 70vw;
+}
+.cta :hover{
+    color: var(--main-yellow);
 }
 /* Tablet styles */
 @media (min-width: 600px) {
