--- a/portfolio.css
+++ b/portfolio.css
@@ -183,6 +183,7 @@ p{
     height: 100%;
     border-radius: 10px;
     aspect-ratio: 3 / 2;
+    padding: 50px;
 }
 .project-div-container .logo-img{
     max-width: 80%;
@@ -224,6 +225,7 @@ p{
     font-family: coda, sans-serif;
 }
 .pagination-button{
+    bottom: 50px;
     background-color: var(--main-yellow);
     padding: 15px 80px;
     border-radius: 10px;
