--- a/portfolio.css
+++ b/portfolio.css
@@ -179,7 +179,7 @@ p{
     border-radius: 10px;
 }
 .project-div-container .logo-div{
-    max-width: 100%;
+    max-width: calc(100vw - 40px);     
     height: 100%;
     border-radius: 10px;
     aspect-ratio: 3 / 2;
@@ -293,6 +293,9 @@ p{
         margin: 50px;
         grid-template-columns: repeat(3, 1fr);
         grid-template-columns: repeat(auto-fill, minmax(336px, 1fr));
+    }
+    .project-div-container .logo-div{
+        max-width: 100%;
     }
 }
 /* Desktop styles */
