--- a/portfolio.css
+++ b/portfolio.css
@@ -174,12 +174,21 @@ p{
 .project-div-main{
     aspect-ratio: 2;
 }
+.project-upper-div{
+    width: 100%;
+    aspect-ratio: 2;
+}
+.project-lower-div{
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+}
 .project-div-container .project-img{
     height: auto;
     border-radius: 10px;
 }
 .project-div-container .logo-div{
-    max-width: calc(100vw - 40px -100px);     
+    max-width: calc(100vw - 140px);     
     height: 100%;
     border-radius: 10px;
     aspect-ratio: 3 / 2;
@@ -199,15 +208,6 @@ p{
     text-align: left;
     padding: 0;
     margin: 0;
-}
-.project-upper-div{
-    width: 100%;
-    aspect-ratio: 2;
-}
-.project-lower-div{
-    display: flex;
-    flex-direction: column;
-    padding: 20px 0;
 }
 .project-button{
     color: var(--main-yellow);
