--- a/portfolio.css
+++ b/portfolio.css
@@ -15,6 +15,9 @@ body {
     position: relative;
     z-index: 1;
 }
+.section{
+    margin: 100px 0;
+}
 .swiper-section{
     width: 100vw;
     height: 75vw;
@@ -190,6 +193,7 @@ p{
 .project-div-container .logo-div{
     max-width: calc(100vw - 140px);     
     height: 100%;
+    max-height: 50vh;
     border-radius: 10px;
     aspect-ratio: 3 / 2;
     padding: 50px;
