--- a/portfolio.css
+++ b/portfolio.css
@@ -198,7 +198,7 @@ p{
     padding: 50px;
 }
 .project-div-container .logo-img{
-    max-width: 80%;
+    max-width: 80vw;
     max-height: 40vh;
 }
 .project-title{
