next project button

--- a/project/project.css
+++ b/project/project.css
@@ -129,6 +129,16 @@ section.active{
 .main-footer{
     left: -20px;
 }
+.next-button{
+    color: var(--main-yellow);
+    font-family: coda, sans-serif;
+    font-size: 30px;
+    align-self: center;
+    margin: 30px 0;
+}
+.next-button:hover{
+    color: #FFF;
+}
 @media (min-width: 600px) {
     body{
         margin: 40px 0 40px 0;
