--- a/portfolio.css
+++ b/portfolio.css
@@ -175,6 +175,7 @@ p{
     list-style: none;
 }
 .project-div-main{
+    display: block;
     aspect-ratio: 2;
 }
 .project-upper-div{
@@ -189,6 +190,10 @@ p{
 .project-div-container .project-img{
     height: auto;
     border-radius: 10px;
+    transition: transform 2s ease;
+}
+.project-div-container .project-img:hover {
+    transform: scale(1.2);
 }
 .project-div-container .logo-div{
     max-width: calc(100vw - 140px);     
@@ -196,6 +201,10 @@ p{
     border-radius: 10px;
     aspect-ratio: 3 / 2;
     padding: 50px;
+    transition: transform 2s ease;
+}
+.project-div-container .logo-div:hover{
+    transform: scale(1.2);
 }
 .project-div-container .logo-img{
     max-width: 80vw;
@@ -217,7 +226,10 @@ p{
     font-size: small;
     font-family: coda, sans-serif;
     text-underline-offset: 5px;
-    margin-top: 10px;
+    margin: 10px 0 0 0;
+    text-align: left;
+    padding: 0;
+    text-decoration: underline;
 }
 .pagination-div{
     display: flex;
