--- a/portfolio.css
+++ b/portfolio.css
@@ -253,26 +253,35 @@ p{
 }
 .client-main-div{
     display: flex;
-    column-gap: 80px;
-    row-gap: 50px;
+    column-gap: 10px;
+    row-gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: 30px;
     margin-bottom: 140px;
-    padding: 0 40px;
+    padding: 0 ;
 }
 .client-logo{
+    scale: 0.7;
     height: 40px;
     opacity: 0.4;
-    transition: transform 1s ease, opacity 2s ease;
+    transition: transform 0.6s ease, opacity 2s ease;
 }
 .client-logo:hover {
     transform: scale(1.2); /* Increase size by 20% */
-    opacity: 0.8;
+    opacity: 1;
 }
 /* Tablet styles */
 @media (min-width: 600px) {
+    .client-main-div{
+        column-gap: 70px;
+        row-gap: 50px;   
+        padding: 0 40px; 
+    }
+    .client-logo{
+        scale: 1;
+    }
     .h1{
         font-size: 60px;
     }
