--- a/project/project.css
+++ b/project/project.css
@@ -132,7 +132,7 @@ section.active{
 .next-button{
     color: var(--main-yellow);
     font-family: coda, sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     align-self: center;
     margin: 30px 0;
 }
@@ -171,6 +171,9 @@ section.active{
         display: block;
         position: absolute;
     }    
+    .next-button{
+        font-size: 30px;
+    }
 }
 @media (min-width: 1024px) {
     h1{
