--- a/portfolio.css
+++ b/portfolio.css
@@ -120,14 +120,31 @@ h2{
     object-fit:contain;
     border-radius: 30px;
 }
-iframe{
+.youtube-div-container {
+    position: relative;
+    max-width: 90vw;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
+.youtube-div-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+/* iframe{
     width: 90vw;
     height: 51vw;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-}
+} */
 .container{
     width: 100vw;
     overflow-x: hidden;
@@ -175,12 +192,15 @@ p{
     list-style: none;
 }
 .project-div-main{
-    display: block;
+    display: flex;
     aspect-ratio: 2;
+    flex-direction: column;
 }
 .project-upper-div{
     width: 100%;
     aspect-ratio: 2;
+    display: flex;
+    align-items: stretch;
 }
 .project-lower-div{
     display: flex;
@@ -409,6 +429,9 @@ p{
         height: 55vw;
     }
     .project-div-container {
-        grid-template-columns: repeat(auto-fill, minmax(336px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(30vw, 1fr));
+    }
+    .conrtainer-wide{
+        max-width: 90vw;
     }
 }
