--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
 body {
     background-color: var(--black);
-    font-family: micro;
+    font-family: micro, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
