--- a/games.css
+++ b/games.css
@@ -1,23 +1,25 @@
 body{
     background-color: rgb(239, 250, 255);
     font-family: micro, sans-serif;
+    padding: 0 40px;
 }
 .games-container{
     display: grid;
-    gap: 30px;
+    gap: 60px;
 }
 a{
-    font-family: coda, sans-serif;
+    /* font-family: coda, sans-serif; */
     text-decoration: none;
     color: black;
     font-weight: 700;
+    font-size:2em;
 }
 a:hover{
-    color: brown;
+    color: rgb(35, 200, 218);
 }
 .game-cover{
     width: 100%;
-    aspect-ratio: 2/1;
+    aspect-ratio: 1.3/1;
     object-fit: cover;
     transition: transform 0.5s;
 }
@@ -37,5 +39,22 @@ a:hover{
 .game-main{
     gap: 20px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+}
+/* Tablet styles */
+@media (min-width: 600px) {   
+    .game-main{
+        gap: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }    
+}
+/* Desktop styles */
+@media (min-width: 1024px) {
+    .game-main{
+        gap: 20px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    
 }
