--- a/games/games-general.css
+++ b/games/games-general.css
@@ -32,3 +32,21 @@ input, button{
     align-items: first baseline;
 
 }
+.intro-div{
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+button {
+    font-size: 18px;
+    margin: 10px;
+    padding: 10px 20px;
+    background-color: rgb(204, 241, 229);
+    border-style: none;
+    cursor: pointer;
+    color: black;
+}
+button:hover{
+    background-color: rgb(150, 196, 196);
+}
