--- a/games/heads-up.css
+++ b/games/heads-up.css
@@ -6,9 +6,12 @@ body {
 }
 #game-screen, #score-screen {
     display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 #word-display {
-    font-size: 2em;
+    font-size: 5em;
     margin: 20px;
 }
 #timer {
