--- a/games.css
+++ b/games.css
@@ -37,14 +37,16 @@ a:hover{
     position: relative;
 }
 .game-main{
-    gap: 20px;
+    row-gap: 40px;
+    column-gap: 20px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
 }
 /* Tablet styles */
 @media (min-width: 600px) {   
     .game-main{
-        gap: 20px;
+        row-gap: 40px;
+        column-gap: 20px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }    
@@ -52,7 +54,8 @@ a:hover{
 /* Desktop styles */
 @media (min-width: 1024px) {
     .game-main{
-        gap: 20px;
+        row-gap: 60px;
+        column-gap: 20px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
