--- a/games/taboo.css
+++ b/games/taboo.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
     padding: 20px;
     background-color: antiquewhite;
-    scroll-behavior: none;
+    max-height: 100vh;
 }
 
 #game-board {
@@ -59,9 +59,6 @@ select{
 }
 /* Tablet styles */
 @media (min-width: 600px) {
-    body{
-        scroll-behavior:auto;
-    }
     .phonenote{
         display: none;
     }
