--- a/games/games-general.css
+++ b/games/games-general.css
@@ -28,7 +28,7 @@ body {
     max-height: 90vh;
     overflow: hidden;
     font-family: Arial, sans-serif;
-
+    padding: 0 20px;
 }
 .container {
     text-align: center;
