--- a/games/would-you-rather.css
+++ b/games/would-you-rather.css
@@ -2,7 +2,7 @@ body {
     background-color: #f9e5d7;
     height: auto;
     max-height: none;
-    overflow:auto;
+    overflow:scroll;
 }
 
 /* #player-section, #theme-section, #game-section{
