--- a/games/would-you-rather.css
+++ b/games/would-you-rather.css
@@ -3,6 +3,7 @@ body {
     height: auto;
     max-height: none;
     overflow:scroll;
+    justify-content: flex-start;
 }
 
 /* #player-section, #theme-section, #game-section{
