before changing the intro setup

--- a/games/would-you-rather.css
+++ b/games/would-you-rather.css
@@ -3,30 +3,12 @@ body {
     height: auto;
     max-height: none;
     overflow:scroll;
-    justify-content: flex-start;
+    justify-content: flex-start !important;
 }
-
-/* #player-section, #theme-section, #game-section{
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-} */
-
-/* #player-section input, #theme-section select, #theme-section button, #player-section button, #game-section button {
-    margin: 10px 0;
-    padding: 10px;
-} */
 .input-outer-div{
     display: flex;
     gap: 10px;
 }
-/* #game-section button{
-    font-size: 20px;
-    border: 0px solid darkred;
-} */
-/* #player-section button{
-    font-size: x-large ;
-} */
 .themes-container{
     display: flex;
     flex-direction: column;
@@ -38,21 +20,18 @@ body {
     font-size: 24px;
     margin: 10px 0;
 }
-
 .green {
     background-color: #d4f5d449;
     color: darkgreen;
     border: 1px solid darkgreen;
     padding: 50px;
 }
-
 .red {
     background-color: #f0c8c8ac;
     color: darkred;
     border: 1px solid darkred;
     padding: 50px;
 }
-
 .or {
     font-size: medium;
     font-weight: bold;
@@ -100,32 +79,29 @@ p{
 .App {
     text-align: center;
 }
-
 img {
     max-width: 300px;
     margin: 20px;
 }
-
 ul {
     text-align: left;
     list-style-type: none;
     padding: 0;
 }
 li {
-    /* cursor: pointer; */
     padding: 0px;
     margin: 0px;
     border: 0px solid #ccc;
     text-align: left;
 
 }
-
-/* button {
-    margin: 10px;
-} */
 .intro-div{
-    /* margin-top: 60px; */
     display: flex;
     flex-direction: column;
     gap: 30px;
+}
+.start-screen{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
