--- a/games.css
+++ b/games.css
@@ -20,6 +20,7 @@ body{
     background-color: rgb(239, 250, 255);
     font-family: micro, sans-serif;
     padding: 0 40px;
+    padding: 0;
 }
 .games-container{
     display: grid;
@@ -48,7 +49,10 @@ a:hover{
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    /* gap: 20px; */
+}
+h1{
+    text-align: center;
 }
 .zoom-box{
     overflow: hidden;
@@ -61,7 +65,10 @@ a:hover{
     grid-template-columns: repeat(1, 1fr);
 }
 /* Tablet styles */
-@media (min-width: 600px) {   
+@media (min-width: 600px) {  
+    body{
+        padding: 20px;
+    } 
     .game-main{
         row-gap: 40px;
         column-gap: 20px;
@@ -71,6 +78,9 @@ a:hover{
 }
 /* Desktop styles */
 @media (min-width: 1024px) {
+    boda{
+        padding: 40px;
+    }
     .game-main{
         row-gap: 60px;
         column-gap: 20px;
