--- a/games/would-you-rather.css
+++ b/games/would-you-rather.css
@@ -17,7 +17,7 @@ body {
     display: inline-block;
     padding: 20px;
     font-size: 24px;
-    margin: 10px 0;
+    /* margin: 10px 0; */
 }
 .green {
     /* background-color: #00ff0010; */
@@ -32,13 +32,14 @@ body {
     /* padding: 20px; */
 }
 .or {
-    font-size: medium;
+    font-size: small;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.731);
     background-color: #f9f8f43f;
     border-radius: 110px;
     text-align: center;
     padding: 0;
+    font-style: italic;
 }
 p{
     display: flex;
@@ -47,11 +48,15 @@ p{
     align-items: stretch;
     text-align: center;
 }
+.two-buttons{
+    display: flex;
+    justify-content: space-around;
+}
 .next-question{
     width: 100%;
     margin: 0;
     padding: 20px;
-    background-color: rgb(234, 231, 178);
+    background-color: rgb(253, 255, 255);
 }
 #player{
     font-size: x-large;
