--- a/games/games-general.css
+++ b/games/games-general.css
@@ -36,7 +36,7 @@ body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
+    margin: 10px auto;
 }
 .note{
     font-size: 14px;
