--- a/games/games-general.css
+++ b/games/games-general.css
@@ -77,7 +77,12 @@ button:hover{
     background-color: rgba(255, 255, 255, 0);
     color: rgb(43, 85, 85);
 }
-
+#start-screen{
+    margin: auto;
+}
+#game-section{
+    margin: auto;
+}
 /* Tablet styles */
 @media (min-width: 600px) {
     body{
