--- a/games/would-you-rather.css
+++ b/games/would-you-rather.css
@@ -58,9 +58,9 @@ p{
     padding: 20px;
     background-color: rgb(253, 255, 255);
 }
-#player{
+/* #player{
     font-size: x-large;
-}
+} */
 #player-name{
     flex-grow: 100;
 }
@@ -117,7 +117,7 @@ li {
     flex-direction: column;
     gap: 30px;
 }
-.start-screen{
+#start-screen{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
