--- a/games/games-general.css
+++ b/games/games-general.css
@@ -33,11 +33,10 @@ body {
 .container {
     text-align: center;
     background-color: #fff;
-    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    width: 100%;
+    padding: 20px;
+    margin-top: 10px;
 }
 .note{
     font-size: 14px;
