--- a/games/games-general.css
+++ b/games/games-general.css
@@ -83,12 +83,19 @@ button:hover{
 #game-section{
     margin: auto;
 }
+.input-outer-div button{
+    margin: 0;
+}
+
 .two-buttons{
     display: flex;
     justify-content: space-around;
     width: 100%;
 }
-
+.drop-down-menu{
+    padding: 5px;
+    width: 100%;
+}
 /* Tablet styles */
 @media (min-width: 600px) {
     body{
