--- a/games/trivia.css
+++ b/games/trivia.css
@@ -61,7 +61,14 @@ body {
     margin-left: 0;
 }
 .input-container{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
     gap: 10px;
+    justify-items: start;
+}
+span{
+    padding: 5px;
+}
+input[type="checkbox"]:checked + span {
+    background-color: rgb(212, 234, 242);
 }
