--- a/games/trivia.css
+++ b/games/trivia.css
@@ -8,13 +8,22 @@ body {
 #game-area {
     display: none;
 }
-#scoreboard {
+
+#scoreboard{
     position: fixed;
     top: 0;
     background: #fff;
     width: 100%;
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    background-color: #ffffff00;
+    margin-left: -40px;
+    display: flex;
+    gap: 10px;
+    justify-content: space-evenly;
+}
+.team-container{
+    display: inline;
+    padding: 20px;
 }
 #question-area {
     margin-top: 50px;
@@ -24,6 +33,10 @@ body {
 }
 #question-area button{
     margin: 20px 0;
+}
+#show-answer{
+    width: 100%;
+    margin-left: 0px;
 }
 #answers button {
     display: block;
@@ -51,13 +64,6 @@ body {
 #theme-selection button{
     width: 100%;
     margin-left: 0;
-}
-#scoreboard{
-    background-color: #ffffff00;
-    margin-left: -40px;
-    display: flex;
-    gap: 10px;
-    justify-content: space-evenly;
 }
 #next-question{
     width: 100%;
