--- a/flowstudio.css
+++ b/flowstudio.css
@@ -25,6 +25,9 @@ html{
 h1, h2, h3, h4, h5, h6{
     font-family: var(--font-family-headers);
 }
+h2{
+    margin: 40px auto ;
+}
 ::selection {
     background-color: var(--main-yellow);
     color: var(--main-black);
@@ -169,6 +172,7 @@ section{
 .floating-nav .cta{
     background-color: var(--main-yellow);
     color: var(--main-black);
+    margin-top: 0;
 }
 .floating-nav .cta:hover{
     background-color: var(--main-non);
@@ -181,6 +185,7 @@ section{
     background-color: var(--main-yellow);
     transition: 0.3s ease;
     font-size: 3vw;
+    margin-top: 20px;
 }
 .cta.sub{
     font-size: 1vw;
@@ -190,7 +195,10 @@ section{
     color: var(--main-yellow);
 }
 /* hero */
-.heroh1{
+.first-section{
+    margin-top: 40px;
+}
+h1{
     font-size: 5vw;
     text-align: center;
 }
@@ -232,10 +240,26 @@ section{
     line-height: 1.1vw;
     margin: 10px;
 }
+.low-caption-div{
+    display: flex;
+    justify-content: flex-end;
+    background-color: var(--main-black);
+    color: var(--main-gray);
+    width: calc(100% + 40px);
+    margin-left: -20px;
+    /* padding: 40px; */
+    margin-top: 40px;
+}
+.low-caption-div .highlight::before{
+    opacity: 0.3;
+}
 .low-caption{
-    margin-top: 50px;
+    margin: 50px 40px;
     font-size: large;
     line-height: 150%;
+    text-align: end;
+    z-index: 1;
+    max-width: 900px;
 }
 .note{
     font-size: 12px;
@@ -247,14 +271,22 @@ section{
 .split{
     display: flex;
 }
-.box{
-    max-width: 250px;
-    font-size: 1.4em;
-}
 .boxes{
     display: flex;
-    gap: 30px;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 40px 0;
+}
+.box{
+    background-color: var(--main-black);
+    color: var(--main-gray);
+    padding: 20px;
+    text-align: center;
+    border-radius: 8px;
+    flex: 1 1 calc(33.333% - 40px); 
+    box-sizing: border-box;
+    max-width: calc(33.333% - 40px);
 }
 
 /* gallery */
@@ -396,13 +428,14 @@ tr:hover {
     justify-content: space-between;
     transition: transform 0.3s ease, opacity 0.3s ease;
     box-shadow: var(--box-shadow);
+    padding-bottom: 50px;
 }
 .subscription .cta{
     display: none;
     opacity: 0.1;
     transition: transform 0.6s ease, opacity 0.3s ease;
 }
-.subscription h2{
+.subscription h3{
     text-decoration: underline;
     text-underline-offset: 10px;
 }
@@ -414,4 +447,5 @@ tr:hover {
 }
 .subscription:hover {
     transform: translateY(-5px);
+    padding-bottom: 0;
 }
